Remove quote marks

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,6 @@
 	</head>
 
 	<body>
-		<button id="ft">Remove 'cookie' box</button>
+		<button id="ft">Remove cookie box</button>
 	</body>
 </html>
